fixed spacing issues on login/signup pages on mobile. Also used MUI components for text

--- a/frontend/src/components/Auth.css
+++ b/frontend/src/components/Auth.css
@@ -5,39 +5,38 @@ body {
     display: flex;
     flex-direction: column;
     max-height: 100vh;
-    margin-bottom: 20px;
+    padding-bottom: 40px;
 }
+
 .auth-header {
-    justify-content: center;
+    display: flex;
     flex-direction: column;
     align-items: center;
 }
+
 .app-logo {
     display: flex;
-    justify-content: center;
     align-items: center;
-    font-size: 57px;
+    line-height: 1;
 }
 .app-logo .location-icon {
-    width: 106px;
-    height: 103px;
+    height: 90px;
+    width: auto;
 }
 .description {
     font-size: 16px;
-    justify-content: center;
     text-align: center;
-    margin-Left: 40px;
-    margin-Right: 40px;
+    padding-top: 10px;
+    margin: auto;
+    max-width: 500px;
 }
 .auth-form {
     display: flex;
     justify-content: center;
-    align-items: 'center';
-    margin-top: 50px;
+    margin-top: 30px;
 }
 .auth-form .auth-form-name {
     text-align: center;
-    font-size: 32px;
 }
 .auth-form .input-box {
     width: 305px;
@@ -47,12 +46,9 @@ body {
 }
 .button {
     text-transform: none !important;
-    padding: 12px !important;
     font-weight: bold !important;
 }
 .back-button {
     margin-top: 10px;
     margin-left: 10px;
-    text-transform: none !important;
-    padding: 12px !important;
-}
+ }
